--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@strapi/plugin-users-permissions": "4.1.12",
     "@strapi/provider-email-sendgrid": "^4.2.2",
     "@strapi/strapi": "4.1.12",
-    "better-sqlite3": "7.4.6",
+    "better-sqlite3": "^7.4.6",
     "pg": "^8.7.3",
     "pg-connection-string": "^2.5.0"
   },
